--- a/notebook/2. Model Training.ipynb
+++ b/notebook/2. Model Training.ipynb
@@ -31,14 +31,11 @@
     "import matplotlib.pyplot as plt \n",
     "import seaborn as sns\n",
     "# Modelling\n",
-    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "from sklearn.metrics import mean_squared_error, r2_score, mean_absolute_error\n",
     "from sklearn.neighbors import KNeighborsRegressor\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
     "from sklearn.ensemble import RandomForestRegressor,AdaBoostRegressor\n",
-    "from sklearn.svm import SVR\n",
     "from sklearn.linear_model import LinearRegression, Ridge,Lasso\n",
-    "from sklearn.metrics import r2_score, mean_absolute_error, mean_squared_error\n",
-    "from sklearn.model_selection import RandomizedSearchCV\n",
     "from catboost import CatBoostRegressor\n",
     "from xgboost import XGBRegressor\n",
     "import warnings"
@@ -407,18 +404,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "1e290fe3",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "\n",
     "# Create a ColumnTransformer with 2 types of transformers\n",
     "# OneHotEncoder for categorical features and StandardScaler for numeric features\n",
     "num_features = X.select_dtypes(exclude=\"object\").columns\n",
     "cat_features = X.select_dtypes(include=\"object\").columns\n",
-    "\n",
-    "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
-    "from sklearn.compose import ColumnTransformer\n",
     "\n",
     "numeric_transformer = StandardScaler()\n",
     "oh_transformer = OneHotEncoder()\n",
@@ -1030,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "eb557b0a",
    "metadata": {},
    "outputs": [
@@ -1046,9 +1043,9 @@
     }
    ],
    "source": [
-    "plt.scatter(y_test,y_pred);\n",
-    "plt.xlabel('Actual');\n",
-    "plt.ylabel('Predicted');"
+    "plt.scatter(y_test,y_pred)\n",
+    "plt.xlabel('Actual')\n",
+    "plt.ylabel('Predicted')"
    ]
   },
   {
